--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/hc1/jobs/1794564'>Job Application for UI / Full Stack / Sr. Software Engineer  at hc1.com</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692139754-senior-full-stack-engineer'>4Catalyzer Senior Full Stack Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Hifield/743999692260874-developpeur-fullstack-php-h-f'>Hifield D?veloppeur FullStack PHP H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-26</p>
@@ -153,7 +161,7 @@ Developer to support USAID's Office of Transition Initiatives (OTI). In this pos
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://juniqe.join.com/jobs/265721-mid-senior-full-stack-engineer-f-m-d-berlin-full-time'>Job @ juniqe (Berlin): (Mid/Senior) Full-Stack Eng... | JOIN</a></h5> 
+<h5><a href='https://juniqe.join.com/jobs/265721-mid-senior-full-stack-engineer-f-m-d-berlin-full-time'>Job @ juniqe (Berlin): (Mid/Senior) Full-Stack Eng... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -163,7 +171,7 @@ Developer to support USAID's Office of Transition Initiatives (OTI). In this pos
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Spruceinfotech2/743999692279083-full-stack-developer'>spruceinfotech Full-Stack Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Spruceinfotech2/743999692279083-full-stack-developer'>spruceinfotech Full-Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -199,7 +207,7 @@ Rochester School is a private school focused on environmental sustainability and
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://assistrcare.join.com/jobs/262752-senior-full-stack-engineer-javascript-python-m-f-x'>Job @ AssistMe (Berlin): Senior Full Stack Enginee... | JOIN</a></h5> 
+<h5><a href='https://assistrcare.join.com/jobs/262752-senior-full-stack-engineer-javascript-python-m-f-x'>Job @ AssistMe (Berlin): Senior Full Stack Enginee... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -219,7 +227,7 @@ interesting?...</p>
 <p>Jul 16, 2019 ... The Jade Software Corporation Digital Team has a position available for a Full-
 Stack Developer to join our digital delivery team as they build a solution for a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/channel-advisor/job/oO8vafwl'>ChannelAdvisor Careers - Full Stack User Interface Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/channel-advisor/job/oO8vafwl'>ChannelAdvisor Careers - Full Stack User Interface Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Express your creativity in Developer Choice competitions, with the opportunity to 
 win prizes and recognition from your peers. Required Qualifications: Minimum 3?...</p>
@@ -312,7 +320,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedge.recruiterbox.com/jobs/fk03fr7/'>
+<h5><a href='https://dedge.recruiterbox.com/jobs/fk03fr7/'>
     D?veloppeur Fullstack PHP/Javascript Junior (H/F) at D-EDGE
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -418,7 +426,7 @@ Limited.</p>
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://cdl-2.workable.com/j/2AA381C11E'>CDL - Jobs: Senior Full Stack JavaScript Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cdl-2.workable.com/j/2AA381C11E'>CDL - Jobs: Senior Full Stack JavaScript Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -428,7 +436,7 @@ Limited.</p>
 machine learning engineers, to craft and implement new product features. You 
 also?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/webmd/job/ohlwafw2'>WebMD Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ohlwafw2'>WebMD Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... WebMD is searching for a Full Stack Developer. This person will collaborate with 
 a full team of technology professionals to take projects from design specs to?...</p>
@@ -447,7 +455,7 @@ a   Full Stack Developer   for Saint Benedict Press, you will collaborate on,?..
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vimeo/jobs/1785715'>Job Application for Full-Stack Engineer, Hosting Task Force at Vimeo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/vimeo/jobs/1785715'>Job Application for Full-Stack Engineer, Hosting Task Force at Vimeo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Video accounts for some 80% of today's global Internet traffic. Vimeo's Video 
 hosting stack enables high quality experience to our creators and viewers.</p>
@@ -466,14 +474,6 @@ hosting stack enables high quality experience to our creators and viewers.</p>
 This position reports to: Manager, Application Development. ServiceNow is?...</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/reddit/jobs/1786282'>Job Application for Senior Full-Stack Engineer, Creation &amp; Experience at Reddit</a></h5> 
-<p><span class="badge badge-light">San Francisco</span></p>
-<p>Posted on: 2019-07-22</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1786284'>Job Application for Senior Full-Stack Engineer, Revenue &amp; Traffic at Reddit</a></h5> 
-<p><span class="badge badge-light">San Francisco</span></p>
-<p>Posted on: 2019-07-22</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1786371'>Job Application for Senior Full-Stack Engineer, Anti-Evil at Reddit</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
