--- a/biostatistics.html
+++ b/biostatistics.html
@@ -58,7 +58,7 @@
 <p><span class="badge badge-light">North Carolina, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=o4rAafwZ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=ntQQUKwi'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=o4rAafwZ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=ntQQUKwi'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -83,7 +83,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://debiopharm-group-sa.workable.com/j/C8AFCBC070'>Debiopharm Group - Jobs: Senior Statistician - Apply online</a></h5> 
+<h5><a href='https://debiopharm-group-sa.workable.com/j/C8AFCBC070'>Debiopharm Group - Jobs: Senior Statistician - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -147,7 +147,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oprAafwk'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oprAafwk'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -159,7 +159,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30142'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30142'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -195,7 +195,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nanostring/jobs/4352466002'>Job Application for Biostatistician (Entry Level) at NanoString</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nanostring/jobs/4352466002'>Job Application for Biostatistician (Entry Level) at NanoString</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -212,7 +212,7 @@ Biometrics team in Belfast, Northern Ireland. This role is responsible for the?.
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---Maryland---Rockville/Expert-Biostatistician_214332'>Expert Biostatistician</a></h5> 
+<h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---Maryland---Rockville/Expert-Biostatistician_214332'>Expert Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Experience with Bayesian methods. ? Experience of statistical programming (e.g., 
 in SAS, R, Python). ? Experience with CDISC data format (SDTM and ADAM).</p>
@@ -286,11 +286,11 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-29861'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-29861'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-29862'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-29862'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -335,7 +335,7 @@ Connecticut. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-15</p>
 <hr/>
-<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-oncology-29618'>Principal Biostatistician - Oncology - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-oncology-29618'>Principal Biostatistician - Oncology - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-14</p>
 <hr/>
@@ -423,7 +423,7 @@ interpretation of results in clinical trials. Program datasets used for analysis
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oa1w9fwA'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oa1w9fwA'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
@@ -431,7 +431,7 @@ interpretation of results in clinical trials. Program datasets used for analysis
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/of0w9fwE'>Premier Research Careers - Senior Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/of0w9fwE'>Premier Research Careers - Senior Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
